<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosidl_generator_d</name>
  <version>0.0.0</version>
  <description>Generate the ROS interfaces in D</description>
  <maintainer email="as.nonanonno@gmail.com">nonanonno</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_export_depend>ament_cmake_core</buildtool_export_depend>
  <buildtool_export_depend>rosidl_cmake</buildtool_export_depend>
  <buildtool_export_depend>rosidl_generator_c</buildtool_export_depend>
  <buildtool_export_depend>rosidl_typesupport_c</buildtool_export_depend>
  <buildtool_export_depend>rosidl_typesupport_interface</buildtool_export_depend>

  <exec_depend>rosidl_parser</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>rosidl_cmake</test_depend>

    <!--
  Bloom does not support group_depend so entries below duplicate the group rosidl_typesupport_c_packages.
  -->
  <test_depend>rosidl_typesupport_connext_c</test_depend>
  <test_depend>rosidl_typesupport_introspection_c</test_depend>
  <test_depend>rosidl_typesupport_fastrtps_c</test_depend>
  <!-- end of group dependencies added for bloom -->
  <test_depend>test_interface_files</test_depend>
  <test_depend>rosidl_generator_c</test_depend>
  <test_depend>rosidl_generator_cpp</test_depend>
  <test_depend>rosidl_typesupport_c</test_depend>
  <test_depend>rcl_bind</test_depend>

  <member_of_group>rosidl_generator_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>